--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -61,39 +61,42 @@
       height:6px;
       background:black;
       position: absolute;
-      top:50%;
       transform-origin: 100%;
-      transform: rotate(90deg);
+      transform:rotate(90deg);
       transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      transition-timing-function: cubic-bezier(0.62, 0.43, 0.94, -0.01);
+      top:50%;
     }
-</style>
 
-<script>
+    .second-hand {
+      height:3px;
+    }
+
+  </style>
+
+  <script>
+
   const secondHand = document.querySelector('.second-hand');
-  const minsHand = document.querySelector('.min-hand');
-  const hourHand = document.querySelector('.hour-hand');
+  const minHand =  document.querySelector('.min-hand');
+  const hourHand =  document.querySelector('.hour-hand');
 
-  function setDate() {
+  function setDate(){
     const now = new Date();
 
     const seconds = now.getSeconds();
-    const secondsDegrees = ((seconds / 60) * 360) + 90;
+    const secondsDegrees = ((seconds / 60) * 360) + 90 ; //converts current seconds to degrees
     secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
-    const mins = now.getMinutes();
-    const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
-    minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+    const minutes = now.getMinutes();
+    const minutesDegree = ((minutes/60) * 360) + 90;
+    minHand.style.transform = `rotate(${minutesDegree}deg)`;
 
     const hour = now.getHours();
-    const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
-    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    const hourDegree = ((hour/60) * 360);
+    hourHand.style.transform = `rotate(${hourDegree}deg)`;
   }
 
   setInterval(setDate, 1000);
-
-  setDate();
-
-</script>
+  </script>
 </body>
 </html>
