--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -31,17 +31,57 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(function(inventor){
+      if(inventor.year >= 1500 && inventor.year < 1600){
+        return  true; // Keep it!
+      }
+    });
+    console.table(fifteen);
+
+    //ES6 format
+    const fifteen_ES6 = inventors.filter(inventor =>
+      (inventor.year >= 1500 && inventor.year < 1600));
+    console.table(fifteen_ES6);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const fullNames = inventors.map(inventor =>
+    // inventor.first +' ' +inventor.last
+
+    //ES6 format
+    `${inventor.first}  ${inventor.last}`
+    );
+
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.sort((firstPerson, secondPerson) =>{
+      if(firstPerson.year > secondPerson.year)
+        {return 1;}
+      else
+        {return -1;}
+   });
+   console.table(ordered);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
 
+    //this format initialize variable total to 0
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalYears);
+
     // 5. Sort the inventors by years lived
+    const sortYearsLived = inventors.sort((firstPerson, secondPerson) =>{
+      if((firstPerson.passed - firstPerson.year) > (secondPerson.passed - secondPerson.year))
+        {return 1;}
+      else
+        {return -1;}
+   });
+   console.table(sortYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
