--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,6 +42,12 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      flex:1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+
     }
 
 
@@ -50,10 +57,29 @@
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
+    /*flex items*/
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .panel > *:first-child{
+      transform:translateY(-100%);
+    }
+    .panel.open-active > *:first-child{
+      transform: translateY(0)
+    }
+    .panel > *:last-child{
+      transform:translateY(100%);
+    }
+    .panel.open-active > *:last-child{
+      transform: translateY(0)
     }
 
     .panel p {
@@ -67,6 +93,7 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size:40px;
     }
 
@@ -102,7 +129,20 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    function toggleOpen(){
+      this.classList.toggle('open');
+    }
+    function toggleActive(e){
+      if(e.propertyName === 'flex-grow'){
+        this.classList.toggle('open-active');
+      }
+
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
 
 
