--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -39,8 +39,8 @@ function displayMatches(){
   const matchArray = findMatches(this.value, cities);
   const html = matchArray.map(place => {
     const regex = new RegExp(this.value, 'gi');
-    const cityName = place.city.replace(regex,'<span class="h1">${this.value}</span>');
-    const stateName = place.state.replace(regex,'<span class="h1">${this.value}</span>');
+    const cityName = place.city.replace(regex,`<span class="h1">${this.value}</span>`);
+    const stateName = place.state.replace(regex,`<span class="h1">${this.value}</span>`);
     return `
     <li>
       <span class="name">${cityName}, ${stateName}</span>
