--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -13,7 +13,7 @@ const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-ctx.strokeStyle = '#BADASS';
+ctx.strokeStyle = '#BADA55';
 ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
 ctx.lineWidth= 100;
