--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -18,28 +18,74 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am a %s string', 'cool');
 
     // Styled
+    console.log('%c I am some greate text', 'font-size:50px; background:red; text-shadow: 10px 10px 0 blue' );
 
     // warning!
+    console.warn('Oh NOO');
 
     // Error :|
+    console.error('Shit!!');
 
     // Info
+    console.info('Crocodiles ear 3-4 people per year');
 
     // Testing
 
+    //output if false, then return statement
+    console.assert(1===1, 'That is wrong!');
+
+    const p = document.querySelector('p');
+
+    console.assert(p.classList.contains('ouch'), 'that is wrong!!');
+
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      //console.group(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('Steve');
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('Steve');
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('Steve');
+    console.count('wes');
 
     // timing
+    console.time('fetching data');
+    fetch('http://api.github.com/users/thisiswhale')
+    .then(data => data.json())
+    .then(data => {
+      console.timeEnd('fetching data');
+      console.log(data);
+    });
 
   </script>
 </body>
