--- a/10 - Hold Shift and Check Checkboxes/index.html
+++ b/10 - Hold Shift and Check Checkboxes/index.html
@@ -99,6 +99,34 @@
   </div>
 
 <script>
+  const checkBoxes = document.querySelectorAll('.item input[type="checkbox"]');
+
+  let lastChecked;
+
+  function handleCheck(e){
+    //CHeck if they had the shift key down
+    //AND check that they are checking it
+    let inBetween = false;
+    if(e.shiftKey && this.checked){
+      //go ahead and do what we please
+      //loop over envery single checkBoxes
+
+      checkBoxes.forEach(checkbox => {
+
+        if(checkbox === this || checkbox === lastChecked){
+          inBetween = !inBetween;
+        }
+
+        if(inBetween){
+          checkbox.checked = true;
+        }
+      });
+    }
+    lastChecked = this;
+  }
+
+  checkBoxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
+
 </script>
 </body>
 </html>
