--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -13,11 +13,15 @@
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
+
+    console.log(players.team);
 
     // You might think we can just do something like this:
+    team[3] = 'Lux';
 
     // however what happens when we update that array?
-
+    //players =  ['Wes', 'Sarah', 'Ryan', 'Lux'];
     // now here is the problem!
 
     // oh no - we have edited the original array too!
@@ -27,25 +31,56 @@
     // So, how do we fix this? We take a copy instead!
 
     // one way
+    const team2 = players.slice();
 
     // or create a new array and concat the old one in
+    const team3 = [].concat(players);
 
     // or use the new ES6 Spread
+    const team4 = [...players];
 
     // now when we update it, the original one isn't changed
+    team4[3] = 'Joey';
+    console.log(team4);
+
+    const team5 = Array.from(players);
 
     // The same thing goes for objects, let's say we have a person object
-
     // with Objects
-
+    const person = {
+      name: 'William leung',
+      age: 40
+    }
     // and think we make a copy:
+    // const captain = person;
+    // captain.number = 99;
 
     // how do we take a copy instead?
+    const cap2 = Object.assign({}, person, {number: 99});
+    console.log(cap2);
 
     // We will hopefully soon see the object ...spread
+    const cap3 = {...person};
+
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
 
+    const will = {
+      name: 'will',
+      age: 100,
+      social: {
+        twitter: '@the',
+        facebook: 'this'
+      }
+    }
+
+    console.clear();
+    console.log(will);
+
+    const dev = Object.assign({}, will);
+
+    //this turns to a sting and reconvert to JSON to make a COPY
+    const dev2 = JSON.parse(JSON.stringify(will));
   </script>
 
 </body>
