--- a/20 - Speech Detection/index.html
+++ b/20 - Speech Detection/index.html
@@ -10,8 +10,36 @@
   </div>
 
 <script>
-  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+//does not work on FireFox
+  window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition ||window.mozSpeechRecognition || window.msSpeechRecognition;
 
+const recognition = new SpeechRecognition();
+recognition.interimResults = true;
+
+let p = document.createElement('p');
+const words = document.querySelector('.words');
+words.appendChild(p);
+
+recognition.addEventListener('result', e => {
+  console.log(e.results);
+  const transcript = Array.from(e.results)
+    .map(result => result[0])
+    .map(result => result.transcript)
+    .join('');
+
+    console.log(transcript);
+
+    p.textContent = transcript;
+    if(e.results[0].isFinal){
+      p = document.createElement('p');
+      words.appendChild(p);
+    }
+});
+
+//when you stop talking, listen again
+recognition.addEventListener('end', recognition.start);
+
+recognition.start();
 
 </script>
 
