--- a/20 - Speech Detection/index.html
+++ b/20 - Speech Detection/index.html
@@ -34,6 +34,10 @@ recognition.addEventListener('result', e => {
       p = document.createElement('p');
       words.appendChild(p);
     }
+
+    if(transcript.includes('unicorns')){
+      console.log('🐴');
+    }
 });
 
 //when you stop talking, listen again
